Created page with "== Hardware == {{Cmd|lspci|output=<pre> 00:00.0 Host bridge: Advanced Micro Devices [AMD] RS780 Host Bridge 00:01.0 PCI bridge: Hewlett-Packard Company Device 9602 00:04.0 PCI br..."

--- a/HP_Pavilion_dv7-1132nr.mw
+++ b/HP_Pavilion_dv7-1132nr.mw
@@ -1,9 +1,5 @@
-{{InfoBox stack
-|{{InfoBox todo|[[#Bluetooth|Bluetooth]]|[[#Keyboard|Keyboard]]|[[#Special keys|Special keys]]|header=true}}
-}}
-
 == Hardware ==
-{{RootCmd|lspci|output=<pre>
+{{Cmd|lspci|output=<pre>
 00:00.0 Host bridge: Advanced Micro Devices [AMD] RS780 Host Bridge
 00:01.0 PCI bridge: Hewlett-Packard Company Device 9602
 00:04.0 PCI bridge: Advanced Micro Devices [AMD] RS780 PCI to PCI bridge (PCIE port 0)
@@ -38,34 +34,7 @@
 0a:00.0 Ethernet controller: Realtek Semiconductor Co., Ltd. RTL8101E/RTL8102E PCI Express Fast Ethernet controller (rev 02)
 0b:00.0 Multimedia controller: Broadcom Corporation BCM70012 Video Decoder [Crystal HD] (rev 01)
 </pre>}}
-
 === BIOS ===
-{{Cmd|dmidecode|output=<pre>
-	Vendor: Hewlett-Packard
-	Version: F.22
-	Release Date: 09/09/2008
-	ROM Size: 1024 kB
-	Characteristics:
-		PCI is supported
-		BIOS is upgradeable
-		BIOS shadowing is allowed
-		Boot from CD is supported
-		Selectable boot is supported
-		BIOS ROM is socketed
-		EDD is supported
-		Japanese floppy for NEC 9800 1.2 MB is supported (int 13h)
-		Japanese floppy for Toshiba 1.2 MB is supported (int 13h)
-		5.25"/360 KB floppy services are supported (int 13h)
-		5.25"/1.2 MB floppy services are supported (int 13h)
-		3.5"/720 KB floppy services are supported (int 13h)
-		3.5"/2.88 MB floppy services are supported (int 13h)
-		8042 keyboard services are supported (int 9h)
-		CGA/mono video services are supported (int 10h)
-		ACPI is supported
-		USB legacy is supported
-		Targeted content distribution is supported
-</pre>}}
-
 === CPU ===
 The CPU is an AMD Turion X2 Dual-Core Mobile RM-70.
 {{Cmd|cat /proc/cpuinfo|output=<pre>
@@ -87,8 +56,7 @@ fpu		: yes
 fpu_exception	: yes
 cpuid level	: 1
 wp		: yes
-flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ht syscall nx mmxext fxsr_opt rdtscp lm 3dnowext 3dnow constant_tsc rep_good nonstop_tsc
-                  extd_apicid pni cx16 lahf_lm cmp_legacy svm extapic cr8_legacy 3dnowprefetch osvw skinit
+flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ht syscall nx mmxext fxsr_opt rdtscp lm 3dnowext 3dnow constant_tsc rep_good nonstop_tsc extd_apicid pni cx16 lahf_lm cmp_legacy svm extapic cr8_legacy 3dnowprefetch osvw skinit
 bogomips	: 4000.34
 TLB size	: 1024 4K pages
 clflush size	: 64
@@ -114,8 +82,7 @@ fpu		: yes
 fpu_exception	: yes
 cpuid level	: 1
 wp		: yes
-flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ht syscall nx mmxext fxsr_opt rdtscp lm 3dnowext 3dnow constant_tsc rep_good nonstop_tsc
-                  extd_apicid pni cx16 lahf_lm cmp_legacy svm extapic cr8_legacy 3dnowprefetch osvw skinit
+flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ht syscall nx mmxext fxsr_opt rdtscp lm 3dnowext 3dnow constant_tsc rep_good nonstop_tsc extd_apicid pni cx16 lahf_lm cmp_legacy svm extapic cr8_legacy 3dnowprefetch osvw skinit
 bogomips	: 3990.33
 TLB size	: 1024 4K pages
 clflush size	: 64
@@ -123,7 +90,6 @@ cache_alignment	: 64
 address sizes	: 40 bits physical, 48 bits virtual
 power management: ts ttp tm stc 100mhzsteps hwpstate
 </pre>}}
-
 {{Cmd|lscpu|output=<pre>
 Architecture:          x86_64
 CPU op-mode(s):        64-bit
@@ -142,125 +108,9 @@ L1d cache:             64K
 L1i cache:             64K
 L2 cache:              512K
 </pre>}}
-
 === Graphics ===
-The GPU is Radeon HD 3200 (see [[Wikipedia:Comparison_of_AMD_graphics_processing_units#Mobility_Radeon_HD_3xxx_Series|this link]] for further informations). Follow the instructions in the [[radeon|Radeon article]].
-{{RootCmd|lspci -k -s 01:05.0|output=<pre>
+The GPU is Radeon HD 3200 ([http://en.wikipedia.org/wiki/Comparison_of_AMD_graphics_processing_units#Mobility_Radeon_HD_3xxx_Series]). Follow the instructions in the [[radeon|Radeon article]].
+{{Cmd|lspci -k -s 01:05.0|output=<pre>
 01:05.0 VGA compatible controller: ATI Technologies Inc RS780M/RS780MN [Radeon HD 3200 Graphics]
 	Subsystem: Hewlett-Packard Company Device 30fc
-	Kernel driver in use: fglrx_pci</pre>
-}}
-
-=== Ethernet ===
-{{RootCmd|lspci -k -s 0a:00.0|output=<pre>
-0a:00.0 Ethernet controller: Realtek Semiconductor Co., Ltd. RTL8101E/RTL8102E PCI Express Fast Ethernet controller (rev 02)
-	Subsystem: Hewlett-Packard Company Device 30fc
-	Kernel driver in use: r8169
-</pre>}}
-
-=== ACPI ===
-{{RootCmd|lspci -k -s 00:18.3|output=<pre>
-00:18.3 Host bridge: Advanced Micro Devices [AMD] Device 1703
-	Kernel driver in use: k10temp
-	Kernel modules: k10temp
-</pre>}}
-
-=== Wireless ===
-{{RootCmd|lspci -k -s 09:00.0|output=<pre>
-09:00.0 Ethernet controller: Atheros Communications Inc. AR5001 Wireless Network Adapter (rev 01)
-	Subsystem: Hewlett-Packard Company Device 137a
-	Kernel driver in use: ath5k
-</pre>}}
-
-=== Sound ===
-{{RootCmd|lspci -k -s 01:05.1|output=<pre>
-01:05.1 Audio device: ATI Technologies Inc RS780 Azalia controller
-	Subsystem: ATI Technologies Inc RS780 Azalia controller
-	Kernel driver in use: HDA Intel
-</pre>}}
-
-=== USB ===
-{{RootCmd|lspci -k -s 00:12.0|output=<pre>
-00:12.0 USB Controller: ATI Technologies Inc SB700/SB800 USB OHCI0 Controller
-	Subsystem: Hewlett-Packard Company Device 30fc
-	Kernel driver in use: ohci_hcd
-</pre>}}
-{{RootCmd|lspci -k -s 00:12.1|output=<pre>
-00:12.1 USB Controller: ATI Technologies Inc SB700 USB OHCI1 Controller
-	Subsystem: Hewlett-Packard Company Device 30fc
-	Kernel driver in use: ohci_hcd
-</pre>}}
-{{RootCmd|lspci -k -s 00:12.2|output=<pre>
-00:12.2 USB Controller: ATI Technologies Inc SB700/SB800 USB EHCI Controller
-	Subsystem: Hewlett-Packard Company Device 30fc
-	Kernel driver in use: ehci_hcd
-</pre>}}
-{{RootCmd|lspci -k -s 00:13.0|output=<pre>
-00:13.0 USB Controller: ATI Technologies Inc SB700/SB800 USB OHCI0 Controller
-	Subsystem: Hewlett-Packard Company Device 30fc
-	Kernel driver in use: ohci_hcd
-</pre>}}
-{{RootCmd|lspci -k -s 00:13.1|output=<pre>
-00:13.1 USB Controller: ATI Technologies Inc SB700 USB OHCI1 Controller
-	Subsystem: Hewlett-Packard Company Device 30fc
-	Kernel driver in use: ohci_hcd
-</pre>}}
-{{RootCmd|lspci -k -s 00:13.2|output=<pre>
-00:13.2 USB Controller: ATI Technologies Inc SB700/SB800 USB EHCI Controller
-	Subsystem: Hewlett-Packard Company Device 30fc
-	Kernel driver in use: ehci_hcd
-</pre>}}
-
-=== SATA, IDE, PCI ===
-{{RootCmd|lspci -k -s 00:11.0|output=<pre>
-00:11.0 SATA controller: ATI Technologies Inc SB700/SB800 SATA Controller [AHCI mode]
-	Subsystem: Hewlett-Packard Company Device 30fc
-	Kernel driver in use: ahci
-</pre>}}
-{{RootCmd|lspci -k -s 00:14.0|output=<pre>
-00:14.0 SMBus: ATI Technologies Inc SBx00 SMBus Controller (rev 3a)
-	Subsystem: Hewlett-Packard Company Device 30fc
-	Kernel driver in use: piix4_smbus
-</pre>}}
-{{RootCmd|lspci -k -s 00:14.1|output=<pre>
-00:14.1 IDE interface: ATI Technologies Inc SB700/SB800 IDE Controller
-	Subsystem: Hewlett-Packard Company Device 30fc
-	Kernel driver in use: pata_atiixp
-</pre>}}
-{{RootCmd|lspci -k -s 00:04.0|output=<pre>
-00:04.0 PCI bridge: Advanced Micro Devices [AMD] RS780 PCI to PCI bridge (PCIE port 0)
-	Kernel driver in use: pcieport
-</pre>}}
-{{RootCmd|lspci -k -s 00:05.0|output=<pre>
-00:05.0 PCI bridge: Advanced Micro Devices [AMD] RS780 PCI to PCI bridge (PCIE port 1)
-	Kernel driver in use: pcieport
-</pre>}}
-{{RootCmd|lspci -k -s 00:06.0|output=<pre>
-00:06.0 PCI bridge: Advanced Micro Devices [AMD] RS780 PCI to PCI bridge (PCIE port 2)
-	Kernel driver in use: pcieport
-</pre>}}
-{{RootCmd|lspci -k -s 00:07.0|output=<pre>
-00:07.0 PCI bridge: Advanced Micro Devices [AMD] RS780 PCI to PCI bridge (PCIE port 3)
-	Kernel driver in use: pcieport
-</pre>}}
-
-=== Webcam ===
-{{Cmd|dmesg {{!}} grep Webcam|output=<pre>
-usb 1-6: Product: HP Webcam 
-uvcvideo: Found UVC 1.00 device HP Webcam  (046d:09b8)
-HP Webcam  as /devices/pci0000:00/0000:00:12.2/usb1/1-6/1-6:1.0/input/input8
-</pre>}}
-
-=== Touchpad ===
-{{Cmd|dmesg {{!}} grep Touchpad|output=<pre>
-Synaptics Touchpad, model: 1, fw: 7.2, id: 0x1a0b1, caps: 0xd04751/0xa00000/0x20000
-input: SynPS/2 Synaptics TouchPad as /devices/platform/i8042/serio1/input/input12
-</pre>}}
-
-=== Bluetooth ===
-
-=== Keyboard ===
-
-==== Special keys ====
-
-[[Category:Laptops]]
+	Kernel driver in use: fglrx_pci</pre>}}
