Created page with "== Hardware ==  {| class="wikitable" |- ! Hardware !! Manufacturer !! Model !! Specification |- | Processor | Intel | Core i7 2640M (Sandy Bridge) | 2,8 GHz (3,5 GHz Turbo Mode) ..."

--- a/Dell_XPS_15z.mw
+++ b/Dell_XPS_15z.mw
@@ -1,6 +1,5 @@
-This guide will lead you to the most important configuration to have a working box on your '''Dell XPS 15z'''. This article was highly based on [http://en.gentoo-wiki.com/wiki/Alienware_M11xR3 Alienware M11xR3], thanks to ''Philipp Leonhardt''.
-
 == Hardware ==
+
 {| class="wikitable"
 |-
 ! Hardware !! Manufacturer !! Model !! Specification
@@ -63,7 +62,9 @@ This guide will lead you to the most important configuration to have a working b
 | SD/MMC/xD/MemoryStick(MS)/MS Duo/MS-HG
 |}
 
-{{RootCmd|lspci -nn|output=<pre>
+{{RootCmd|lspci -nn}}
+
+<pre>
 00:00.0 Host bridge [0600]: Intel Corporation 2nd Generation Core Processor Family DRAM Controller [8086:0104] (rev 09)
 00:01.0 PCI bridge [0604]: Intel Corporation Xeon E3-1200/2nd Generation Core Processor Family PCI Express Root Port [8086:0101] (rev 09)
 00:02.0 VGA compatible controller [0300]: Intel Corporation 2nd Generation Core Processor Family Integrated Graphics Controller [8086:0126] (rev 09)
@@ -83,9 +84,10 @@ This guide will lead you to the most important configuration to have a working b
 03:00.0 Network controller [0280]: Intel Corporation Centrino Advanced-N 6230 [8086:0091] (rev 34)
 04:00.0 USB controller [0c03]: NEC Corporation uPD720200 USB 3.0 Host Controller [1033:0194] (rev 04)
 06:00.0 Ethernet controller [0200]: Atheros Communications Inc. AR8151 v2.0 Gigabit Ethernet [1969:1083] (rev c0)
-</pre>}}
+</pre>
 
-{{RootCmd|lsusb -nn|output=<pre>
+{{RootCmd|lsusb -nn}}
+<pre>
 Bus 001 Device 001: ID 1d6b:0002 Linux Foundation 2.0 root hub
 Bus 002 Device 001: ID 1d6b:0002 Linux Foundation 2.0 root hub
 Bus 003 Device 001: ID 1d6b:0002 Linux Foundation 2.0 root hub
@@ -94,9 +96,10 @@ Bus 001 Device 002: ID 8087:0024 Intel Corp. Integrated Rate Matching Hub
 Bus 002 Device 002: ID 8087:0024 Intel Corp. Integrated Rate Matching Hub
 Bus 001 Device 003: ID 0c45:642a Microdia 
 Bus 002 Device 003: ID 8086:0189 Intel Corp. 
-</pre>}}
+</pre>
 
-{{RootCmd|cat /proc/cpuinfo|output=<pre>
+{{RootCmd|cat /proc/cpuinfo}}
+<pre>
 processor       : 0
 vendor_id       : GenuineIntel
 cpu family      : 6
@@ -200,10 +203,12 @@ clflush size    : 64
 cache_alignment : 64
 address sizes   : 36 bits physical, 48 bits virtual
 power management:
-</pre>}}
+</pre>
+
 
 == make.conf ==
-{{FileBox|filename=/etc/portage/make.conf|1=
+{{File|/etc/make.conf||
+<pre>
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
@@ -220,19 +225,23 @@ NOTUSE="-hal"
 NOTEBOOK="laptop dell ieee1394 lcdfilter lm_sensors"
 SYSTEM="nvidia opengl threads acpi ssse3 sse4_1 sse4_2 v4l v4l2"
 USE="${NOTUSE} ${SYSTEM} ${NOTEBOOK} ..."
-}}
+</pre>}}
 
 == GCC CFLAGS and -march=native ==
-
 === Analyzing CLFAGS ===
-GCC Versions before 4.6 will not detect the right CFLAGS for a new Core i7 2nd Gen (Sandy Bridge) CPU with <code>-march=native</code>.
-{{RootCmd|gcc-4.5.3 -march{{=}}native -E -v - </dev/null 2>&1 {{!}} grep cc1|output=<pre>
-/usr/libexec/gcc/x86_64-pc-linux-gnu/4.5.3/cc1 -E -quiet -v - -D_FORTIFY_SOURCE=2 -march=core2 -mcx16 -msahf -maes -mpclmul -mpopcnt -mavx --param l1-cache-size=32 --param l1-cache-line-size=64 --param l2-cache-size=4096 -mtune=generic
-</pre>}}
+GCC Versions before 4.6 will not detect the right CFLAGS for a new Core i7 2nd Gen (Sandy Bridge) CPU with {{Codeline|<nowiki>-march=native</nowiki>}}.
 
-{{RootCmd|gcc-4.6.2 -march{{=}}native -E -v - </dev/null 2>&1 {{!}} grep cc1|output=<pre>
+{{RootCmd|'''gcc-4.5.3''' <nowiki>-march=native -E -v - </dev/null 2>&1 | grep cc1</nowiki>}}
+
+<pre>
+/usr/libexec/gcc/x86_64-pc-linux-gnu/4.5.3/cc1 -E -quiet -v - -D_FORTIFY_SOURCE=2 -march=core2 -mcx16 -msahf -maes -mpclmul -mpopcnt -mavx --param l1-cache-size=32 --param l1-cache-line-size=64 --param l2-cache-size=4096 -mtune=generic
+</pre>
+
+{{RootCmd|'''gcc-4.6.2''' <nowiki>-march=native -E -v - </dev/null 2>&1 | grep cc1</nowiki>}}
+
+<pre>
 /usr/libexec/gcc/x86_64-pc-linux-gnu/4.6.2/cc1 -E -quiet -v - -march=corei7-avx -mcx16 -msahf -mno-movbe -maes -mpclmul -mpopcnt -mno-abm -mno-lwp -mno-fma -mno-fma4 -mno-xop -mno-bmi -mno-tbm -mavx -msse4.2 -msse4.1 --param l1-cache-size=32 --param l1-cache-line-size=64 --param l2-cache-size=4096 -mtune=corei7-avx
-</pre>}}
+</pre>
 
 === Upgrading GCC ===
 There is no stable version of GCC 4.6, so hopefully soon you will have full core i7 support in your CFLAGS.
@@ -241,7 +250,7 @@ There is no stable version of GCC 4.6, so hopefully soon you will have full core
 
 === Processor Settings ===
 This changes was made under Linux/x86 3.3.3-gentoo-sources, using Genkernel.
-{{KernelBox|title=Processor|1=
+{{Kernel|Processor|<pre>
 Processor type and features  --->
     [*] Tickless System (Dynamic Ticks)
     [*] Symmetric multi-processing support
@@ -257,10 +266,10 @@ Processor type and features  --->
     (0)     MTRR cleanup enable value (0-1)
     (1)     MTRR cleanup spare reg num (0-7)
     Timer frequency (1000 HZ)  --->
-}}
+</pre>}}
 
 === Power Management ===
-{{KernelBox|title=Power Management|1=
+{{Kernel|Power Management|<pre>
 Power management and ACPI options  --->
     [*] Suspend to RAM and standby
     [*] Run-time PM core functionality
@@ -291,20 +300,20 @@ Power management and ACPI options  --->
     [*]   Cpuidle Driver for Intel Processors
             Memory power savings  --->
         <*> Intel chipset idle memory power saving driver
-}}
+</pre>}}
 
 === PCI Bus Driver ===
-{{KernelBox|title=PCI Bus Options|1=
+{{kernel|PCI Bus Options|<pre>
 Bus options (PCI etc.)  --->
     [*] PCI support
     [*]   Support mmconfig PCI config space access
     [*]   PCI Express support
     [*]     Root Port Advanced Error Reporting support
     [*] Message Signaled Interrupts (MSI and MSI-X)
-}}
+</pre>}}
 
 === LAN and Wireless Networking ===
-{{KernelBox|title=Networking drivers|1=
+{{kernel|Networking drivers|<pre>
 [*] Networking support  ---> 
     <M>   Bluetooth subsystem support  --->
         <M>   RFCOMM protocol support
@@ -337,26 +346,27 @@ Device Drivers  --->
             <M>     Atheros L1C Gigabit Ethernet support (EXPERIMENTAL)
         [*]   Wireless LAN  --->
             <M>   Intel Wireless WiFi Next Gen AGN - Wireless-N/Advanced-N/Ultimate-N (iwlwifi)
-}}
+</pre>}}
 
 === SATA Controller ===
-{{KernelBox|title=AHCI Controller driver|1=
+{{kernel|AHCI Controller driver|<pre>
 Device Drivers  --->
     <*> Serial ATA and Parallel ATA drivers  --->
         [*]   ATA ACPI Support
         <*>   AHCI SATA support
-}}
+</pre>}}
+
 
 === FireWire (IEEE 1394) ===
-{{KernelBox|title=Firewire driver|1=
+{{kernel|Firewire driver|<pre>
 Device Drivers  --->
     IEEE 1394 (FireWire) support  --->
         <*> FireWire driver stack
         <M>   OHCI-1394 controllers
-}}
+</pre>}}
 
 === I2C / SMBus ===
-{{KernelBox|title=I2C SMBus driver|1=
+{{kernel|I2C SMBus driver|<pre>
 Device Drivers  --->
     -*- I2C support  --->
         [*]   Enable compatibility bits for old user-space
@@ -364,10 +374,10 @@ Device Drivers  --->
         [*]   Autoselect pertinent helper modules
             I2C Hardware Bus support  --->
                <M> Intel 82801 (ICH/PCH)
-}}
+</pre>}}
 
 === Graphics Card ===
-{{KernelBox|title=Graphic driver|1=
+{{kernel|Graphic driver|<pre>
 Device Drivers  --->
     Graphics support  --->
         <*> /dev/agpgart (AGP Support)  --->
@@ -379,10 +389,10 @@ Device Drivers  --->
         -*- Support for frame buffer devices  --->
             [*]   Enable firmware EDID
             [*]   Enable Video Mode Handling Helpers
-}}
+</pre>}}
 
 === Sound Card ===
-{{KernelBox|title=ALSA Sound Card drivers|1=
+{{kernel|ALSA Sound Card drivers|<pre>
 Device Drivers  --->
     <*> Sound card support  --->
         <M>   Advanced Linux Sound Architecture  --->
@@ -394,10 +404,10 @@ Device Drivers  --->
                     [*]   Enable generic HD-audio codec parser
                     [*]   Aggressive power-saving on
                     (3)     Default time-out for HD-audio power-save mode
-}}
+</pre>}}
 
 === USB Controller ===
-{{KernelBox|title=USB Controller driver|1=
+{{kernel|USB Controller driver|<pre>
 Device Drivers  --->
     [*] USB support  --->
         {*}   Support for Host-side USB
@@ -405,58 +415,46 @@ Device Drivers  --->
         <*>   xHCI HCD (USB 3.0) support (EXPERIMENTAL)
         <*>   EHCI HCD (USB 2.0) support
         <*>   USB Mass Storage support
-}}
+</pre>}}
 
 === Card Reader ===
-{{KernelBox|title=SD Card driver|1=
-Device Drivers  --->
-      <M> MMC/SD/SDIO card support  --->
-          <M>   MMC block device driver
-                [*]     Use bounce buffer for simple hosts
-          <M>   SDIO UART/GPS class support
-          <M>   Secure Digital Host Controller Interface support
-          <M>     SDHCI support on PCI bus
-      SCSI device support ---> 
-          [*] Probe all LUNs on each SCSI device 
-}}
-To proper provide SD Card reader automount option you must create the following file.
-{{FileBox|filename=/etc/local.d/20-sdcard.start|lang=bash|1=
-echo 1 > /sys/bus/pci/rescan
-}}
-You must also make it runnable with
-{{RootCmd|chmod a+x /etc/local.d/20-sdcard.start}}
+Not functional iet. I'm still looking for a good solution for it.
 
 === Webcam ===
-{{KernelBox|title=Webcam driver|1=
+{{Kernel|Webcam driver|<pre>
 Device Drivers  --->
     <M> Multimedia support  --->
-            [*]   Media USB Adapters  --->
-                  <M>   USB Video Class (UVC)
-                  [*]     UVC input events device support
-                  <M>   GSPCA based webcams  --->
+        <M>   Video For Linux
+        [*]   Video capture adapters  --->
+                [*]   Autoselect pertinent encoders/decoders and other helper chips
+                [*]   V4L USB devices  --->
+                    <M>   USB Video Class (UVC)
+                    [*]     UVC input events device support
+                    <M>   GSPCA based webcams  --->
                         <M>   SN9C20X USB Camera Driver
-}}
+</pre>}}
 Test it using mplayer:
-{{RootCmd|mplayer tv:// -tv driver{{=}}v4l2:width{{=}}640:height{{=}}480:device{{=}}/dev/video0 -fps 15 -vf screenshot}}
+{{RootCmd|<pre>mplayer tv:// -tv driver=v4l2:width=640:height=480:device=/dev/video0 -fps 15 -vf screenshot</pre>}}
 
 == GRUB Bootloader Config ==
 For GRUB the Sandy Bridge needs some more special kernel parameters to reach the optimal performance and save some battery power.
 Add this to your kernel command line:
-{{FileBox|filename=/boot/grub/grub.conf|1=
+{{File|/boot/grub/grub.conf||<pre>
 i915.i915_enable_rc6=1 i915.semaphores=1 i915.i915_enable_fbc=1 i915.lvds_downclock=1 pcie_aspm=force
-}}
-If you enabled {{Highlight|Intel IOMMU}} support in your kernel config you also need to add this to your kernel command line:
-{{FileBox|filename=/boot/grub/grub.conf|1=
+</pre>}}
+If you enabled {{Highlight|Intel IOMMU}}Support in your kernel config you also need to add this to your kernel command line:
+{{File|/boot/grub/grub.conf||<pre>
 intel_iommu=off
-}}
+</pre>}}
 Otherwise bumblebee produces IOMMU Errors on loading the nvidia driver.
+
 
 == Power Management Tweaks ==
 
 === PCI/USB Autosuspend, CPU Scheduler, Intel HDA Powersave ===
 Create in local initscript to turn on all available powersaving options.
 Edit it to your preferences.
-{{FileBox|filename=/etc/local.d/10-powermanagement.start|lang=bash|1=
+{{File|/etc/local.d/10-powermanagement.start||<pre>
 #############################
 # Power Aware CPU Scheduler #
 #############################
@@ -549,7 +547,7 @@ echo 1 > /sys/module/snd_hda_intel/parameters/power_save
 
 
 echo min_power > /sys/class/scsi_host/host0/link_power_management_policy
-}}
+</pre>}}
 
 After adding the script don't forget to make it executable to run on boot.
 {{RootCmd|chmod a+x /etc/local.d/10-powermanagement.start}}
@@ -562,27 +560,31 @@ Needed things for bumblebeed to run properly:
 * VirtualGL to stream the window running on nvidia driver to the actual X Session
 * bumblebeed itself for controlling the bbswitch and nvidia module
 
-For further information about Bumblebee Project, visit [https://github.com/Bumblebee-Project The Bumblebee Project] page or the [[NVIDIA/Bumblebee|Gentoo Bumblebee Wiki Page]].
+For further information about Bumblebee Project, visit [https://github.com/Bumblebee-Project The Bumblebee Project] page.
 
 === Nvidia Graphics Driver ===
-The Nvidia graphics driver should already be installed after setting <code>VIDEO_CARDS="intel nvidia"</code> in {{Path|make.conf}}. Just be sure to setup the OpenGL extension to work with the Intel driver:
-{{RootCmd|eselect opengl list|output=<pre>
-Available OpenGL implementations:
+The Nvidia graphics driver should already be installed after setting {{Codeline|<nowiki>VIDEO_CARDS="intel nvidia"</nowiki>}} in {{Codeline|make.conf}}. Just be sure to setup the OpenGL extension to work with the Intel driver:
+{{RootCmd|eselect opengl list
+ <pre>Available OpenGL implementations:
  [1] nvidia
- [2] xorg-x11 *
-</pre>}}
+ [2] xorg-x11 *</pre>}}
 Take the correct option for Intel driver
 {{RootCmd|eselect opengl set 2}}
 
 === Installing bbswitch module ===
-{{Note|Installation of the bbswitch module has to be done after every kernel change}}
-{{Emerge|bbswitch}}
 
-After that you can test the module by loading it and look into your {{Highlight|syslog}}
-{{RootCmd
-|modprobe bbswitch
-|cat /var/log/messages {{!}} grep bbswitch
-|output=<pre>
+{{Note|Installation of the bbswitch module has to be done after every kernel change}}
+
+{{RootCmd|emerge bbswitch}}
+
+After that you can test the module by loading it and look into your {{codeline|syslog}}
+
+{{RootCmd|modprobe bbswitch
+| <nowiki>cat /var/log/messages | grep bbswitch</nowiki>}}
+
+It should look like this
+
+{{Code|<nowiki>cat /var/log/messages | grep bbswitch</nowiki>|<pre>
 bbswitch: Found integrated VGA device 0000:00:02.0: \_SB_.PCI0.GFX0
 bbswitch: Found discrete VGA device 0000:01:00.0: \_SB_.PCI0.PEG0.PEGP
 bbswitch: detected an Optimus _DSM function
@@ -591,29 +593,29 @@ bbswitch: Succesfully loaded. Discrete card 0000:01:00.0 is on
 </pre>}}
 
 Get the status of the nvidia card
-{{RootCmd
-|cat /proc/acpi/bbswitch
-|0000:01:00.0 ON
-}}
+{{RootCmd|<pre>
+# cat /proc/acpi/bbswitch
+0000:01:00.0 ON
+</pre>}}
 
 Turn the card off, respectively on:
-{{RootCmd
-|echo OFF > /proc/acpi/bbswitch
-|echo ON > /proc/acpi/bbswitch
-}}
+{{RootCmd|<pre>
+echo OFF > /proc/acpi/bbswitch
+echo ON > /proc/acpi/bbswitch
+</pre>}}
 
 You can put this on the initial script created before, to make this change on every bootup.
 
-{{Note|After turning the nvidia card off your system temparature will decrease, and processor fan could also completely turn off. Don't be scared}}
+{{note|After turning the nvidia card off your system temparature will decrease, and processor fan could also completely turn off. Don't be scared}}
 
 === Running Optimus ===
 Optimus still give us headakes to configure. I'm still working out to make a fully working box, and Optimus is one of my threads. I know that [http://en.gentoo-wiki.com/wiki/Asus_UL30Jt Asus UL30Jt] also has support for Optmus, but I have to make some testes before post it here. I've aready followed the [http://en.gentoo-wiki.com/wiki/X.Org/nVidia_Optimus nVidia Optimus] guide, but it seems that still there is a missing part of the puzzle.
 
 === VGA Switching ===
-I have being trying a lot of solutions to make this thing work on Dell XPS 15z, but none of then was successfuly. There is a guide to [http://en.gentoo-wiki.com/wiki/Vga_switcheroo VGA Switchroo], but it seems that I can't do this or the hardware of Dell XPS 15z does not suport this resource. After keep looking and googled a lot I found a solution based on synergy and bumblebee with the optimus server. Note that, right now, there is no suppor for VGA switching and this is a workaround that works prety well for those who wants to try the NVIDIA power on their laptops.
+I have being trying a lot of solutions to make this thing work on Dell XPS 15z, but none of then was successfuly. There is a guide to [http://en.gentoo-wiki.com/wiki/Vga_switcheroo VGA Switchroo], but it seems that I can't do this or the hardware of Dell XPS 15z does not suport this resource. But I will keep lookint and updating this article as soon as possible. Every time I enable the VGA Switch, my kernel complains about that on boot.
 
-[[NVIDIA_Optimus_and_HDMI_Output_Configuration|NVIDIA Optimus and HDMI Output Configuration]]
+<span style="color:red">'''::: Still under construction...'''</span>
 
-{{Note|If you experience problems with bumblebee, before looking for a solution, try to upgrade your kernel to a stable 3.5.}}
+* {{Author|João Carlos | 2012-05-23}}
 
-[[Category:Laptops]]
+[[Category:Dell Laptops]]
