Created page with "Assuming you have instaled the Xilinx installation, this article will guide you on installing Cable Drivers for Xilinx USB JTAB Programmers. If you have problems, please check th..."

--- a/Xilinx_USB_JTAG_Programmers.mw
+++ b/Xilinx_USB_JTAG_Programmers.mw
@@ -1,23 +1,20 @@
-''' Special Note: This wiki addresses 2 types of JTAG cables: 1. Digilent Xilinx USB JTAG cables 2. Xilinx XUP-USB-JTAG cable as well'''
+Assuming you have instaled the Xilinx installation, this article will guide you on installing Cable Drivers for Xilinx USB JTAB Programmers. If you have problems, please check that you have not done any misstake on the primary installation.
 
-Assuming you have installed the Xilinx installation, this article will guide you on installing Cable Drivers for Xilinx USB JTAB Programmers. If you have problems, please check that you have not done any misstake on the primary installation.
-
-== Digilent Xilinx USB JTAG cable ==
 === Getting what's needed ===
 First of all, this guide assumes you have installed Xilinx ISE (version 13.4 is used here) into the default path of /opt/Xilinx
 Next, you will need to have GIT installed to get the required libraries. This approach does not use the official Xilinx libraries but a replica of them. You will also need libusb which is required in the compiling of the drivers. On a 64-bit host, you will need to get bin86 and dev86 packages.
 
-=== Digilent Adept Runtime x86/x64 ===
+=== Digilent Adept Runtime x32/x64 ===
 Digilent Adept Runtime package is available at [http://www.digilentinc.com/Products/Detail.cfm?NavPath=2,66,828&Prod=ADEPT2 Digilent] website.
 
 Chose the package according to your linux OS. If it’s a 32-bit OS, dowload Adept Runtime x86 Linux. If it’s 64-bit kernel, download Adept Runtime x64 Linux. The downloaded software package is wrapped in format .tar.gz.
 
-=== Digilent Adept Utilities x86/x64 ===
+=== Digilent Adept Utilities x32/x64 ===
 Digilent Adept Runtime package is available at [http://www.digilentinc.com/Products/Detail.cfm?NavPath=2,66,828&Prod=ADEPT2 Digilent] website.
 
 Chose the package according to your linux OS. If it’s a 32-bit OS, dowload Adept Utilities x86 Linux. If it’s 64-bit kernel, download Adept Utilities x64 Linux. The downloaded software package is wrapped in format .tar.gz.
 
-=== Digilent Plugins x86/x64 ===
+=== Digilent Plugins x32/64 ===
 Download Digilent Plugin for Xilinx Design Suite if you want to download your bitstream from XPS, ISE or iMPACT directly and debug with SDK or Chipscope. Digilent Plugin is alse available at [http://www.digilentinc.com/Products/Detail.cfm?NavPath=2,66,768&Prod=DIGILENT-PLUGIN Digilent] website.
 
 Chose the package according to your linux OS. If it’s a 32-bit OS, dowload Digilent Plug-in x86 Linux. If it’s 64-bit kernel, download Digilent Plug-in x64 Linux. The downloaded software package is wrapped in format .tar.gz.
@@ -39,17 +36,17 @@ Enter directory digilent.adept.runtime_<version>-<platform> then run the install
 
 The lines should look like this:
 
-{{CodeBox|title=install.sh|lang=bash|1=
-<nowiki>209</nowiki> cprocUdev=$(ps -e {{!}} grep -i -c udevd)  
-<nowiki>210</nowiki>  
-<nowiki>211</nowiki> if [ "${szVmjr}" = "3" ]  
-<nowiki>212</nowiki> then  
-<nowiki>213</nowiki>        if (( $cprocUdev ))  
-<nowiki>214</nowiki>        then  
-<nowiki>215</nowiki>               let fUseUdev=1  
-<nowiki>216</nowiki>        fi  
-<nowiki>217</nowiki> fi
-}}
+{{Code|<nowiki>nano install.sh</nowiki>|<pre>
+209 cprocUdev=$(ps -e | grep -i -c udevd)  
+210  
+211 if [ "${szVmjr}" = "3" ]  
+212 then  
+213        if (( $cprocUdev ))  
+214        then  
+215               let fUseUdev=1  
+216        fi  
+217 fi
+</pre>}}
 
 ==== Install Digilent Adept Utilities ====
 
@@ -85,39 +82,5 @@ Now open Impact
 See if any FPGA can be found on your JTAG chain.
 
 For now on I belive that you can walk by yourself, and begin to program your device.
-
-== Xilinx XUP USB JTAG cable ==
-These drivers and method of using them is verified with ISE 14.5 on Gentoo 64bit. 
-Drivers provided with ISE installation don't work with Linux system. Even installing as super user gives an error.
-
-=== Prerequisites ===
-To follow these instructions git and fxload are required
-{{Emerge|git fxload}}
-
-=== Getting drivers ===
-Clone the git repository for proper drivers:
-{{Cmd|git clone git://git.zerfleddert.de/usb-driver}}
-change to the directory where repository is cloned and compile proper drivers
-{{Cmd|make}}
-
-==== Setting up Environment ====
-Add compiled driver library to environment path:
-{{Cmd|export LD_PRELOAD{{=}}path/to/USB/driver/folder/usb-driver/libusb-driver.so}}
-
-=== Tweaking udev ===
-Copy proper rule file under udev:
-For impact to work with compiled drivers 'TEMPNODE' needs to be changed to 'tempnode', BUS=="usb" needs to be removed and SYSFS needs to be changed to ATTR.
-{{RootCmd|sed /path/to/ISE/installation/folder/14.x/ISE_DS/ISE/bin/lin(64)/xusbdfwu.rules -e 's:TEMPNODE:tempnode:g' {{!}} sed 's:BUS{{=}}{{=}}"usb", ::g' {{!}} sed 's:SYSFS:ATTR:g' {{!}} sudo tee /etc/udev/rules.d/50-xusbdfwu.rules 1>/dev/null}}
-
-Copy Xilinx hex files to /usr/share
-{{RootCmd|cp /path/to/installation/folder/Xilinx/ISE/bin/lin/xusb*.hex /usr/share}}
-
-Restart udev
-{{RootCmd|/etc/init.d/udev restart}}
-
-or, if using systemd
-{{RootCmd|sudo udevadm control --reload}}
-
-Now starting impact should detect cable properly.
 
 [[Category:Hardware]]
